sandbox/output
FizzBuzzTest.java:8: error: cannot find symbol
        assertEquals("1", fizzBuzz.print(1));
                          ^
  symbol:   variable fizzBuzz
  location: class FizzBuzzTest
1 error
